--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
   <body>
     <div class="main">
       <h2 class="text-1-1">Ahora visitanos en:</h2>
-      <a class="logo" href="www.financiate.com.co">
+      <a class="logo" href="https://financiate.com.co/">
         <img src="IMG/Logos/Logo_Slogan.png" alt="financiate"
       /></a>
       <div class="btn">
-        <a href="www.financiate.com.co">
+        <a href="https://financiate.com.co/">
           <button class="btn-stc" data-aos="fade-up" data-aos-duration="1000">
             Click Aquí
           </button>
